# Claw

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  overview.md  pyproject.toml  requirements.txt  ruff.toml
.workbuddy/: .coverage  .pre-commit-config.yaml  dashboard.html  overview.md  pyproject.toml  ruff.toml
.workbuddy/artifacts/: 2026-06-19-us-market-close.md  marvis-bridge-monitor-2026-06-17-2307.md  midday-monitor-20260618-1030.md  review-2026-06-18.md  sim-trade-report-2026-06-19.md  simulation-2026-06-18-report.md  收盘回顾-2026-06-18.md
.workbuddy/data/: article_signals.json  asset_allocations.json  astock_holidays_2026.json  automation_health.json  cost_history.json  heartbeat.json  holdings.json  investment_plan_20260607_014259.json  macro_data.json  macro_factor_data_handbook.md  market_data_20260605.json  prompt_cache_report.json  stock_pool.json  stock_strategy_600519_20260607_014259.json  stock_strategy_600519_20260607_015015.json  stock_strategy_600519_20260607_015029.json
.workbuddy/docs/: ai-collaboration-upgrade.md  asset-allocation-framework.md  automation-inventory.md  mode-guide.md  model-assignment-optimization.md  prompt-cache-optimization.md  routing-rules.md
.workbuddy/lib/: __init__.py  error_handler.py  errors.py
.workbuddy/memory/: 2026-06-05.md  2026-06-06.md  2026-06-08.md  2026-06-09.md  2026-06-10.md  2026-06-11.md  2026-06-12.md  2026-06-13.md  2026-06-14.md  2026-06-15.md  2026-06-16.md  2026-06-17.md  2026-06-18.md  2026-06-19.md  2026-06-20.md  2026-07-11.md  2026-07-12.md  2026-07-13.md  2026-07-14.md  2026-07-15.md  2026-07-16.md  2026-07-17.md  2026-07-18.md  CHRONICLE.md  MEMORY.md  SKILL-prompt-cache-optimization.md  from-marvis-2026-06-10-2200.md  from-marvis-2026-06-12-1430.md  git_status_log.md  git_status_log_20260612_020017_445.md  git_status_log_20260613_021017_811.md  request-github-token-from-marvis.md
.workbuddy/reports/: 2026-06-04-morning.md  600012-300128-002354-analysis-2026-05-31.html  analysis_changjiang_20260610.md  analysis_changjiang_asset_allocation_20260611.md  cost_report_2026-06-16.json  cost_report_2026-06-17.json  cost_report_2026-06-18.json  cost_report_2026-06-19.json  daily_2026-06-05.json  daily_2026-06-06.json  daily_2026-06-08.json  daily_2026-06-09.json  daily_2026-06-10.json  daily_2026-06-11.json  daily_2026-06-12.json  daily_2026-06-15.json  daily_2026-06-16.json  daily_2026-06-17.json  daily_comprehensive_2026-06-06.md  daily_comprehensive_2026-06-07.md  earnings_report_2026-06-05.md  expert_analysis_2026-06-06.md  monitor_2026-06-05.md  monitor_2026-06-08.md  premarket_20260603.md  project_summary_20260611.md  signal_trace_2026-06-13.md  stock_selection_2026-06-08.md  wechat_morning_report_2026-06-08.md  weekly_2026-06-12.json  投资系统架构对比分析报告.md
.workbuddy/scripts/: _create_wx_doc.py  akshare_data.py  archive_and_signal.py  astock_code_name.json  automation_health.py  automation_preamble.sh  backtest.py  benchmark_compare.py  compute_signal_weights.py  cost_monitor.py  cost_monitor_legacy.py  cron_monitor.py  expanded_pool_klines.json  expert_analysis_000858_20260607_014816.json  expert_analysis_002049_20260607_015030.json  expert_analysis_600460_20260607_015030.json  expert_analysis_600519_20260607_014259.json  (+49 more)
(+189 files in other folders)
